# dataScope-DEMO

./: .gitignore  Datascope.spec  README.md  accessibility.json  datascope_UI.spec  datascope_app.spec  display change and special characters selection update.txt  final_validation.py  gui_test_theme.py  main.py  package_app.py  pyproject.toml  requirements.txt  validate_enhancements.py
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
dataScope/: README.md  datahandlergoals.txt  requirements.txt
dataScope/src/: data_handler.py  flet_datascope_test.py  gui_test_theme.py
src/: accessibility_manager.py  data_handler.py  data_view.py  data_view_backup.py  datascope_UI.py  debug_import.py  enhanced_data_view.py  gui_test_theme.py  logging_handler.py  recommendation_engine.py  recommendation_ui.py  recommendations_demo.py  sound_system.py  syntax_highlight_utils.py  visual_analyst.py
tests/: test_data_handler.py
